samples/_failures_safe/1761316944_810430_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_403d5264.c: In function ‘main’:
./samples/SAFE/__tmp_403d5264.c:179:5: error: expected expression at end of input
  179 |     if (token_count >=
      |     ^~
./samples/SAFE/__tmp_403d5264.c:179:5: error: expected declaration or statement at end of input
